Remove unused code from audio_set_params.

Addresses PR kern/52434.